@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2017,v 1.1015 2017/03/06 22:47:14 wiz Exp $
+$NetBSD: CHANGES-2017,v 1.1016 2017/03/07 08:39:39 manu Exp $
 
 Changes to the packages collection and infrastructure in 2017:
 
@@ -1239,3 +1239,4 @@ Changes to the packages collection and infrastructure in 2017:
 	Updated devel/libtool-info to 2.4.6 [jperkin 2017-03-06]
 	Updated time/khal to 0.9.3 [wiz 2017-03-06]
 	Updated misc/dpkg to 1.18.23 [wiz 2017-03-06]
+	Updated filesystems/glusterfs to 3.8.9 [wiz 2017-03-07]
